# tomlua

./: Cargo.toml
examples/: basic.rs  example_config.toml  faulty_lua.rs  self_mutating.lua  self_mutating.rs  test_script.lua
src/: error.rs  lib.rs
