[package]
name = "tomlua"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tomlua-macros = { path = "../tomlua-macros/" }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
mlua = { version = "0.11.4", features = ["lua54", "vendored"] }


[lib]
name = "tomlua"
path = "src/lib.rs"
